Properly support withdrawing peripheral jobs
* Allow directly withdrawing peripheral jobs only for jobs that are not
  related to transport orders.
* When forcibly withdrawing transport orders, fail all peripheral jobs
  related to them and notify executing peripherals, if any.
* While here, properly handle regular withdrawals of transport orders
  without interfering with peripheral interactions that have already
  been triggered.

Merged-by: Martin Grzenia <martin.grzenia@iml.fraunhofer.de>
